commit translated contents

--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellcollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionUpdateData:interface'
-    summary: '一个用于更新 TableCellCollection 对象上的数据的接口，可用于 "tableCellCollection （<!-- -->{ ... }<!-- -->)".'
-    name: OneNote.Interfaces.TableCellCollectionUpdateData
-    fullName: OneNote.Interfaces.TableCellCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableCellCollectionUpdateData#items:member'
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: OneNote.Interfaces.TableCellData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableCellCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionUpdateData#items~0:complex'
-    name: 'OneNote.Interfaces.TableCellData[]'
-    fullName: 'OneNote.Interfaces.TableCellData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.TableCellData:interface'
-        name: OneNote.Interfaces.TableCellData
-        fullName: OneNote.Interfaces.TableCellData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: OneNote.Interfaces.TableCellCollectionUpdateData
+uid: onenote!OneNote.Interfaces.TableCellCollectionUpdateData:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableCellCollectionUpdateData
+summary: 用于更新 TableCellCollection 对象上的数据的接口，用于在 "tableCellCollection ( 中使用<!-- -->{ ... }<!-- -->)".
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: onenote!OneNote.Interfaces.TableCellCollectionUpdateData#items:member
+  package: onenote!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: OneNote.Interfaces.TableCellData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableCellData:interface" />[]
+metadata:
+  ms.openlocfilehash: 6f21564de7f4f28bcbfc8e10e4e270735de42c61
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250812"
