--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecelldata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecelldata.yml
@@ -1,101 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableCellData:interface'
-    summary: 描述通过调用 "tableCell （）" 返回的数据的接口。
-    name: OneNote.Interfaces.TableCellData
-    fullName: OneNote.Interfaces.TableCellData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableCellData#cellIndex:member'
-      - 'onenote!OneNote.Interfaces.TableCellData#id:member'
-      - 'onenote!OneNote.Interfaces.TableCellData#paragraphs:member'
-      - 'onenote!OneNote.Interfaces.TableCellData#rowIndex:member'
-      - 'onenote!OneNote.Interfaces.TableCellData#shadingColor:member'
-  - uid: 'onenote!OneNote.Interfaces.TableCellData#cellIndex:member'
-    summary: |-
-      获取单元格行中的单元格索引。 只读。
+### YamlMime:TSType
+name: OneNote.Interfaces.TableCellData
+uid: onenote!OneNote.Interfaces.TableCellData:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableCellData
+summary: '一个接口，该接口描述通过调用 "tableCell ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: cellIndex
+  uid: onenote!OneNote.Interfaces.TableCellData#cellIndex:member
+  package: onenote!
+  fullName: cellIndex
+  summary: >-
+    获取单元格行中的单元格索引。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: cellIndex
-    fullName: cellIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'cellIndex?: number;'
-      return:
-        type:
-          - number
-  - uid: 'onenote!OneNote.Interfaces.TableCellData#id:member'
-    summary: |-
-      获取单元格的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.TableCellData#paragraphs:member'
-    summary: |-
-      获取 TableCell 中 Paragraph 对象的集合。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'cellIndex?: number;'
+    return:
+      type: number
+- name: id
+  uid: onenote!OneNote.Interfaces.TableCellData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取单元格的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraphs
-    fullName: paragraphs
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraphs?: OneNote.Interfaces.ParagraphData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableCellData#paragraphs~0:complex'
-  - uid: 'onenote!OneNote.Interfaces.TableCellData#rowIndex:member'
-    summary: |-
-      获取表中单元格行的索引。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: rowIndex
-    fullName: rowIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowIndex?: number;'
-      return:
-        type:
-          - number
-  - uid: 'onenote!OneNote.Interfaces.TableCellData#shadingColor:member'
-    summary: |-
-      获取并设置单元格的底纹色
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: paragraphs
+  uid: onenote!OneNote.Interfaces.TableCellData#paragraphs:member
+  package: onenote!
+  fullName: paragraphs
+  summary: >-
+    获取 TableCell 中 Paragraph 对象的集合。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: shadingColor
-    fullName: shadingColor
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'shadingColor?: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'onenote!OneNote.Interfaces.TableCellData#paragraphs~0:complex'
-    name: 'OneNote.Interfaces.ParagraphData[]'
-    fullName: 'OneNote.Interfaces.ParagraphData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.ParagraphData:interface'
-        name: OneNote.Interfaces.ParagraphData
-        fullName: OneNote.Interfaces.ParagraphData
-      - name: '[]'
-        fullName: '[]'
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraphs?: OneNote.Interfaces.ParagraphData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ParagraphData:interface" />[]
+- name: rowIndex
+  uid: onenote!OneNote.Interfaces.TableCellData#rowIndex:member
+  package: onenote!
+  fullName: rowIndex
+  summary: >-
+    获取表中单元格行的索引。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowIndex?: number;'
+    return:
+      type: number
+- name: shadingColor
+  uid: onenote!OneNote.Interfaces.TableCellData#shadingColor:member
+  package: onenote!
+  fullName: shadingColor
+  summary: >-
+    获取并设置单元格的底纹色
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'shadingColor?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: fb55659ba2bd32125897cef110b8494f209a7589
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250777"
