--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tableloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tableloadoptions.yml
@@ -1,127 +1,130 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions:interface'
-    summary: |-
-      表示 OneNote 页中的表格。
+### YamlMime:TSType
+name: OneNote.Interfaces.TableLoadOptions
+uid: onenote!OneNote.Interfaces.TableLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableLoadOptions
+summary: >-
+  表示 OneNote 页中的表格。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.TableLoadOptions
-    fullName: OneNote.Interfaces.TableLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.TableLoadOptions#borderVisible:member'
-      - 'onenote!OneNote.Interfaces.TableLoadOptions#columnCount:member'
-      - 'onenote!OneNote.Interfaces.TableLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.TableLoadOptions#paragraph:member'
-      - 'onenote!OneNote.Interfaces.TableLoadOptions#rowCount:member'
-      - 'onenote!OneNote.Interfaces.TableLoadOptions#rows:member'
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#borderVisible:member'
-    summary: |-
-      获取或设置边框是否可见。 如果为 true，则边框可见，如果为 false，则隐藏边框。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: borderVisible
-    fullName: borderVisible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'borderVisible?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#columnCount:member'
-    summary: |-
-      获取表中的列数。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.TableLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: borderVisible
+  uid: onenote!OneNote.Interfaces.TableLoadOptions#borderVisible:member
+  package: onenote!
+  fullName: borderVisible
+  summary: >-
+    获取或设置边框是否可见。 如果为 true，则边框可见，如果为 false，则隐藏边框。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: columnCount
-    fullName: columnCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columnCount?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#id:member'
-    summary: |-
-      获取表格的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#paragraph:member'
-    summary: |-
-      获取包含“表格”对象的“段落”对象。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'borderVisible?: boolean;'
+    return:
+      type: boolean
+- name: columnCount
+  uid: onenote!OneNote.Interfaces.TableLoadOptions#columnCount:member
+  package: onenote!
+  fullName: columnCount
+  summary: >-
+    获取表中的列数。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraph
-    fullName: paragraph
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraph?: OneNote.Interfaces.ParagraphLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ParagraphLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#rowCount:member'
-    summary: |-
-      获取表格中的行数。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: rowCount
-    fullName: rowCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowCount?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions#rows:member'
-    summary: |-
-      获取所有表格行。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columnCount?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.TableLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取表格的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: rows
-    fullName: rows
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rows?: OneNote.Interfaces.TableRowCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.ParagraphLoadOptions:interface'
-    name: OneNote.Interfaces.ParagraphLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.TableRowCollectionLoadOptions
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: paragraph
+  uid: onenote!OneNote.Interfaces.TableLoadOptions#paragraph:member
+  package: onenote!
+  fullName: paragraph
+  summary: >-
+    获取包含“表格”对象的“段落”对象。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraph?: OneNote.Interfaces.ParagraphLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ParagraphLoadOptions:interface" />
+- name: rowCount
+  uid: onenote!OneNote.Interfaces.TableLoadOptions#rowCount:member
+  package: onenote!
+  fullName: rowCount
+  summary: >-
+    获取表格中的行数。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowCount?: boolean;'
+    return:
+      type: boolean
+- name: rows
+  uid: onenote!OneNote.Interfaces.TableLoadOptions#rows:member
+  package: onenote!
+  fullName: rows
+  summary: >-
+    获取所有表格行。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rows?: OneNote.Interfaces.TableRowCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableRowCollectionLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: d04820b04ae9158620934cbdb290aafc288ee91d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250742"
