--- a/docs/docs-ref-autogen/outlook/outlook/office.attachmentdetailscompose.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.attachmentdetailscompose.yml
@@ -1,111 +1,105 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.AttachmentDetailsCompose:interface'
-    summary: |-
-      代表项目上的附件。 仅限撰写模式。
+### YamlMime:TSType
+name: Office.AttachmentDetailsCompose
+uid: outlook!Office.AttachmentDetailsCompose:interface
+package: outlook!
+fullName: Office.AttachmentDetailsCompose
+summary: >-
+  代表项目上的附件。 仅限撰写模式。
 
-      对象的数组 `AttachmentDetailsCompose` 作为约会或邮件项目的附件属性返回。
 
-      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+  对象的数组 `AttachmentDetailsCompose` 作为约会或邮件项目的附件属性返回。
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写
-    name: Office.AttachmentDetailsCompose
-    fullName: Office.AttachmentDetailsCompose
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.AttachmentDetailsCompose#attachmentType:member'
-      - 'outlook!Office.AttachmentDetailsCompose#id:member'
-      - 'outlook!Office.AttachmentDetailsCompose#isInline:member'
-      - 'outlook!Office.AttachmentDetailsCompose#name:member'
-      - 'outlook!Office.AttachmentDetailsCompose#size:member'
-      - 'outlook!Office.AttachmentDetailsCompose#url:member'
-  - uid: 'outlook!Office.AttachmentDetailsCompose#attachmentType:member'
-    summary: 获取一个指示附件类型的值。
-    name: attachmentType
-    fullName: attachmentType
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'attachmentType: MailboxEnums.AttachmentType | string;'
-      return:
-        type:
-          - 'outlook!Office.AttachmentDetailsCompose#attachmentType~0:complex'
-  - uid: 'outlook!Office.AttachmentDetailsCompose#id:member'
-    summary: 获取附件的索引。
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.AttachmentDetailsCompose#isInline:member'
-    summary: 获取指示是否应在项目正文中显示附件的值。
-    name: isInline
-    fullName: isInline
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'isInline: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'outlook!Office.AttachmentDetailsCompose#name:member'
-    summary: |-
-      获取附件的名称。
 
-      **重要说明**：对于通过拖放或 "附加项目" 附加的邮件或约会项目，在 `name` Mac 上的 Outlook 中包含文件扩展名，但在 web 或 Windows 上排除该扩展名。
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.AttachmentDetailsCompose#size:member'
-    summary: 获取以字节为单位的附件大小。
-    name: size
-    fullName: size
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'size: number;'
-      return:
-        type:
-          - number
-  - uid: 'outlook!Office.AttachmentDetailsCompose#url:member'
-    summary: 获取附件的 url （如果附件的类型为`MailboxEnums.AttachmentType.Cloud`<!-- -->.
-    name: url
-    fullName: url
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'url?: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'outlook!Office.AttachmentDetailsCompose#attachmentType~0:complex'
-    name: MailboxEnums.AttachmentType | string
-    fullName: Office.MailboxEnums.AttachmentType | string
-    spec.typeScript:
-      - uid: 'outlook!Office.MailboxEnums.AttachmentType:enum'
-        name: MailboxEnums.AttachmentType
-        fullName: Office.MailboxEnums.AttachmentType
-      - name: ' | string'
-        fullName: ' | string'
+  \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: >-
+  **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
+
+
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: attachmentType
+  uid: outlook!Office.AttachmentDetailsCompose#attachmentType:member
+  package: outlook!
+  fullName: attachmentType
+  summary: 获取一个指示附件类型的值。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'attachmentType: MailboxEnums.AttachmentType | string;'
+    return:
+      type: <xref uid="outlook!Office.MailboxEnums.AttachmentType:enum" /> | string
+- name: id
+  uid: outlook!Office.AttachmentDetailsCompose#id:member
+  package: outlook!
+  fullName: id
+  summary: 获取附件的索引。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id: string;'
+    return:
+      type: string
+- name: isInline
+  uid: outlook!Office.AttachmentDetailsCompose#isInline:member
+  package: outlook!
+  fullName: isInline
+  summary: 获取指示是否应在项目正文中显示附件的值。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'isInline: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: outlook!Office.AttachmentDetailsCompose#name:member
+  package: outlook!
+  fullName: name
+  summary: >-
+    获取附件的名称。
+
+
+    **重要说明**：对于通过拖放或 "附加项目" 附加的邮件或约会项目，在 `name` Mac 上的 Outlook 中包含文件扩展名，但在 web 或 Windows 上排除该扩展名。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name: string;'
+    return:
+      type: string
+- name: size
+  uid: outlook!Office.AttachmentDetailsCompose#size:member
+  package: outlook!
+  fullName: size
+  summary: 获取以字节为单位的附件大小。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'size: number;'
+    return:
+      type: number
+- name: url
+  uid: outlook!Office.AttachmentDetailsCompose#url:member
+  package: outlook!
+  fullName: url
+  summary: 获取附件的 url （如果附件的类型为 `MailboxEnums.AttachmentType.Cloud`<!-- -->.
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'url?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 60363d2f59a401262844bc9d5d2ba47b08fa228e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250482"
