--- a/docs/docs-ref-autogen/outlook/outlook/office.sharedproperties.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.sharedproperties.yml
@@ -1,85 +1,91 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.SharedProperties:interface'
-    summary: |-
-      表示共享文件夹、邮箱或日历中的约会或邮件的属性。
+### YamlMime:TSType
+name: Office.SharedProperties
+uid: outlook!Office.SharedProperties:interface
+package: outlook!
+fullName: Office.SharedProperties
+summary: >-
+  表示共享文件夹、邮箱或日历中的约会或邮件的属性。
 
-      有关如何使用此对象的详细信息，请参阅 [代理访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access) 文章。
 
-      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
+  有关如何使用此对象的详细信息，请参阅 [代理访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access) 文章。
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
-    name: Office.SharedProperties
-    fullName: Office.SharedProperties
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.SharedProperties#delegatePermissions:member'
-      - 'outlook!Office.SharedProperties#owner:member'
-      - 'outlook!Office.SharedProperties#targetMailbox:member'
-      - 'outlook!Office.SharedProperties#targetRestUrl:member'
-  - uid: 'outlook!Office.SharedProperties#delegatePermissions:member'
-    summary: 委派对共享文件夹的权限。
-    name: delegatePermissions
-    fullName: delegatePermissions
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'delegatePermissions: MailboxEnums.DelegatePermissions;'
-      return:
-        type:
-          - 'outlook!Office.MailboxEnums.DelegatePermissions:enum'
-  - uid: 'outlook!Office.SharedProperties#owner:member'
-    summary: 共享项目的所有者的电子邮件地址。
-    name: owner
-    fullName: owner
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'owner: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.SharedProperties#targetMailbox:member'
-    summary: |-
-      所有者的代理访问邮箱的位置。 根据 Outlook 客户端的不同，此位置可能有所不同。
 
-      使用 with `targetRestUrl` 来构造 REST 操作的 URL。
+  \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: >-
+  **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
-      示例用法： `targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
-    name: targetMailbox
-    fullName: targetMailbox
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'targetMailbox: string;'
-      return:
-        type:
-          - string
-  - uid: 'outlook!Office.SharedProperties#targetRestUrl:member'
-    summary: |-
-      REST API 的基本 URL (当前 https://outlook.office.com/api) 。
 
-      使用 with `targetMailbox` 来构造 REST 操作的 URL。
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: delegatePermissions
+  uid: outlook!Office.SharedProperties#delegatePermissions:member
+  package: outlook!
+  fullName: delegatePermissions
+  summary: 委派对共享文件夹的权限。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'delegatePermissions: MailboxEnums.DelegatePermissions;'
+    return:
+      type: <xref uid="outlook!Office.MailboxEnums.DelegatePermissions:enum" />
+- name: owner
+  uid: outlook!Office.SharedProperties#owner:member
+  package: outlook!
+  fullName: owner
+  summary: 共享项目的所有者的电子邮件地址。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'owner: string;'
+    return:
+      type: string
+- name: targetMailbox
+  uid: outlook!Office.SharedProperties#targetMailbox:member
+  package: outlook!
+  fullName: targetMailbox
+  summary: >-
+    所有者的代理访问邮箱的位置。 根据 Outlook 客户端的不同，此位置可能有所不同。
 
-      示例用法： `targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
-    name: targetRestUrl
-    fullName: targetRestUrl
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'targetRestUrl: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'outlook!Office.MailboxEnums.DelegatePermissions:enum'
-    name: MailboxEnums.DelegatePermissions
+
+    使用 with `targetRestUrl` 来构造 REST 操作的 URL。
+
+
+    示例用法： `targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'targetMailbox: string;'
+    return:
+      type: string
+- name: targetRestUrl
+  uid: outlook!Office.SharedProperties#targetRestUrl:member
+  package: outlook!
+  fullName: targetRestUrl
+  summary: >-
+    REST API 的基本 URL (当前 https://outlook.office.com/api) 。
+
+
+    使用 with `targetMailbox` 来构造 REST 操作的 URL。
+
+
+    示例用法： `targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'targetRestUrl: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 9bc2a1a9314067703487f6aaa649fcfaefd274e0
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250490"
