--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.pagecollectiondata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.pagecollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.Interfaces.PageCollectionData:interface'
-    summary: 描述通过调用 "pageCollection （）" 返回的数据的接口。
-    name: Visio.Interfaces.PageCollectionData
-    fullName: Visio.Interfaces.PageCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: visio!
-    children:
-      - 'visio!Visio.Interfaces.PageCollectionData#items:member'
-  - uid: 'visio!Visio.Interfaces.PageCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Visio.Interfaces.PageData[];'
-      return:
-        type:
-          - 'visio!Visio.Interfaces.PageCollectionData#items~0:complex'
-references:
-  - uid: 'visio!Visio.Interfaces.PageCollectionData#items~0:complex'
-    name: 'Visio.Interfaces.PageData[]'
-    fullName: 'Visio.Interfaces.PageData[]'
-    spec.typeScript:
-      - uid: 'visio!Visio.Interfaces.PageData:interface'
-        name: Visio.Interfaces.PageData
-        fullName: Visio.Interfaces.PageData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Visio.Interfaces.PageCollectionData
+uid: visio!Visio.Interfaces.PageCollectionData:interface
+package: visio!
+fullName: Visio.Interfaces.PageCollectionData
+summary: '一个接口，该接口描述通过调用 "pageCollection ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: visio!Visio.Interfaces.PageCollectionData#items:member
+  package: visio!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Visio.Interfaces.PageData[];'
+    return:
+      type: <xref uid="visio!Visio.Interfaces.PageData:interface" />[]
+metadata:
+  ms.openlocfilehash: 8068061a14cc78edb939606a134a818d949f2201
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49249601"
