--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellcollectionloadoptions.yml
@@ -1,127 +1,130 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions:interface'
-    summary: |-
-      包含 TableCell 对象的集合。
+### YamlMime:TSType
+name: OneNote.Interfaces.TableCellCollectionLoadOptions
+uid: onenote!OneNote.Interfaces.TableCellCollectionLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableCellCollectionLoadOptions
+summary: >-
+  包含 TableCell 对象的集合。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.TableCellCollectionLoadOptions
-    fullName: OneNote.Interfaces.TableCellCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#cellIndex:member'
-      - 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#paragraphs:member'
-      - 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#parentRow:member'
-      - 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#rowIndex:member'
-      - 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#shadingColor:member'
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#cellIndex:member'
-    summary: |-
-      对于集合中的每一项：获取其所在行中的单元格的索引。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: cellIndex
-    fullName: cellIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'cellIndex?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#id:member'
-    summary: |-
-      对于集合中的每一项：获取单元格的 ID。 只读。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: cellIndex
+  uid: onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#cellIndex:member
+  package: onenote!
+  fullName: cellIndex
+  summary: >-
+    对于集合中的每一项：获取其所在行中的单元格的索引。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#paragraphs:member'
-    summary: |-
-      对于集合中的每一项：获取 TableCell 中的段落对象的集合。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraphs
-    fullName: paragraphs
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraphs?: OneNote.Interfaces.ParagraphCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#parentRow:member'
-    summary: |-
-      对于集合中的每一项：获取单元格的父行。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'cellIndex?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    对于集合中的每一项：获取单元格的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: parentRow
-    fullName: parentRow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentRow?: OneNote.Interfaces.TableRowLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableRowLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#rowIndex:member'
-    summary: |-
-      对于集合中的每一项：获取表中的单元格的行的索引。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: rowIndex
-    fullName: rowIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowIndex?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#shadingColor:member'
-    summary: |-
-      对于集合中的每一项：获取并设置单元格的底纹颜色
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: paragraphs
+  uid: onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#paragraphs:member
+  package: onenote!
+  fullName: paragraphs
+  summary: >-
+    对于集合中的每一项：获取 TableCell 中的段落对象的集合。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: shadingColor
-    fullName: shadingColor
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'shadingColor?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.ParagraphCollectionLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions:interface'
-    name: OneNote.Interfaces.TableRowLoadOptions
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraphs?: OneNote.Interfaces.ParagraphCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface" />
+- name: parentRow
+  uid: onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#parentRow:member
+  package: onenote!
+  fullName: parentRow
+  summary: >-
+    对于集合中的每一项：获取单元格的父行。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentRow?: OneNote.Interfaces.TableRowLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableRowLoadOptions:interface" />
+- name: rowIndex
+  uid: onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#rowIndex:member
+  package: onenote!
+  fullName: rowIndex
+  summary: >-
+    对于集合中的每一项：获取表中的单元格的行的索引。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowIndex?: boolean;'
+    return:
+      type: boolean
+- name: shadingColor
+  uid: onenote!OneNote.Interfaces.TableCellCollectionLoadOptions#shadingColor:member
+  package: onenote!
+  fullName: shadingColor
+  summary: >-
+    对于集合中的每一项：获取并设置单元格的底纹颜色
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'shadingColor?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: a54a26d884a1380dcf3b186f874bfd790f9a9749
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250819"
