--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellupdatedata.yml
@@ -1,27 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableCellUpdateData:interface'
-    summary: '一个用于更新 TableCell 对象上的数据的接口，可用于 "tableCell （<!-- -->{ ... }<!-- -->)".'
-    name: OneNote.Interfaces.TableCellUpdateData
-    fullName: OneNote.Interfaces.TableCellUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableCellUpdateData#shadingColor:member'
-  - uid: 'onenote!OneNote.Interfaces.TableCellUpdateData#shadingColor:member'
-    summary: |-
-      获取并设置单元格的底纹色
+### YamlMime:TSType
+name: OneNote.Interfaces.TableCellUpdateData
+uid: onenote!OneNote.Interfaces.TableCellUpdateData:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableCellUpdateData
+summary: 用于更新 TableCell 对象上的数据的接口，用于在 "tableCell ( 中使用<!-- -->{ ... }<!-- -->)".
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: shadingColor
+  uid: onenote!OneNote.Interfaces.TableCellUpdateData#shadingColor:member
+  package: onenote!
+  fullName: shadingColor
+  summary: >-
+    获取并设置单元格的底纹色
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: shadingColor
-    fullName: shadingColor
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'shadingColor?: string;'
-      return:
-        type:
-          - string
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'shadingColor?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 7d017a9b0931c9f596861aecc76c9d659bd8a4fa
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250763"
