--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tabledata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tabledata.yml
@@ -1,101 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableData:interface'
-    summary: 描述通过调用 "toJSON （）" 返回的数据的接口。
-    name: OneNote.Interfaces.TableData
-    fullName: OneNote.Interfaces.TableData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableData#borderVisible:member'
-      - 'onenote!OneNote.Interfaces.TableData#columnCount:member'
-      - 'onenote!OneNote.Interfaces.TableData#id:member'
-      - 'onenote!OneNote.Interfaces.TableData#rowCount:member'
-      - 'onenote!OneNote.Interfaces.TableData#rows:member'
-  - uid: 'onenote!OneNote.Interfaces.TableData#borderVisible:member'
-    summary: |-
-      获取或设置边框是否可见。 如果为 true，则边框可见，如果为 false，则隐藏边框。
+### YamlMime:TSType
+name: OneNote.Interfaces.TableData
+uid: onenote!OneNote.Interfaces.TableData:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableData
+summary: '描述通过调用 "toJSON ( # A1" 返回的数据的接口。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: borderVisible
+  uid: onenote!OneNote.Interfaces.TableData#borderVisible:member
+  package: onenote!
+  fullName: borderVisible
+  summary: >-
+    获取或设置边框是否可见。 如果为 true，则边框可见，如果为 false，则隐藏边框。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: borderVisible
-    fullName: borderVisible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'borderVisible?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableData#columnCount:member'
-    summary: |-
-      获取表中的列数。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: columnCount
-    fullName: columnCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columnCount?: number;'
-      return:
-        type:
-          - number
-  - uid: 'onenote!OneNote.Interfaces.TableData#id:member'
-    summary: |-
-      获取表格的 ID。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'borderVisible?: boolean;'
+    return:
+      type: boolean
+- name: columnCount
+  uid: onenote!OneNote.Interfaces.TableData#columnCount:member
+  package: onenote!
+  fullName: columnCount
+  summary: >-
+    获取表中的列数。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.TableData#rowCount:member'
-    summary: |-
-      获取表格中的行数。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: rowCount
-    fullName: rowCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowCount?: number;'
-      return:
-        type:
-          - number
-  - uid: 'onenote!OneNote.Interfaces.TableData#rows:member'
-    summary: |-
-      获取所有表格行。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columnCount?: number;'
+    return:
+      type: number
+- name: id
+  uid: onenote!OneNote.Interfaces.TableData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取表格的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: rows
-    fullName: rows
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rows?: OneNote.Interfaces.TableRowData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableData#rows~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.TableData#rows~0:complex'
-    name: 'OneNote.Interfaces.TableRowData[]'
-    fullName: 'OneNote.Interfaces.TableRowData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.TableRowData:interface'
-        name: OneNote.Interfaces.TableRowData
-        fullName: OneNote.Interfaces.TableRowData
-      - name: '[]'
-        fullName: '[]'
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: rowCount
+  uid: onenote!OneNote.Interfaces.TableData#rowCount:member
+  package: onenote!
+  fullName: rowCount
+  summary: >-
+    获取表格中的行数。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowCount?: number;'
+    return:
+      type: number
+- name: rows
+  uid: onenote!OneNote.Interfaces.TableData#rows:member
+  package: onenote!
+  fullName: rows
+  summary: >-
+    获取所有表格行。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rows?: OneNote.Interfaces.TableRowData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableRowData:interface" />[]
+metadata:
+  ms.openlocfilehash: 1809d59612bf9d143e72a501fd9b0cce97e84e31
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250749"
