--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowcollectiondata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowcollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionData:interface'
-    summary: 描述通过调用 "tableRowCollection （）" 返回的数据的接口。
-    name: OneNote.Interfaces.TableRowCollectionData
-    fullName: OneNote.Interfaces.TableRowCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableRowCollectionData#items:member'
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: OneNote.Interfaces.TableRowData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableRowCollectionData#items~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionData#items~0:complex'
-    name: 'OneNote.Interfaces.TableRowData[]'
-    fullName: 'OneNote.Interfaces.TableRowData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.TableRowData:interface'
-        name: OneNote.Interfaces.TableRowData
-        fullName: OneNote.Interfaces.TableRowData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: OneNote.Interfaces.TableRowCollectionData
+uid: onenote!OneNote.Interfaces.TableRowCollectionData:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableRowCollectionData
+summary: '一个接口，该接口描述通过调用 "tableRowCollection ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: onenote!OneNote.Interfaces.TableRowCollectionData#items:member
+  package: onenote!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: OneNote.Interfaces.TableRowData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableRowData:interface" />[]
+metadata:
+  ms.openlocfilehash: a5c0c3d989f489f22152f99f64218677eace7dad
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250721"
