--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowcollectionloadoptions.yml
@@ -1,111 +1,114 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions:interface'
-    summary: |-
-      包含 TableRow 对象的集合。
+### YamlMime:TSType
+name: OneNote.Interfaces.TableRowCollectionLoadOptions
+uid: onenote!OneNote.Interfaces.TableRowCollectionLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableRowCollectionLoadOptions
+summary: >-
+  包含 TableRow 对象的集合。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.TableRowCollectionLoadOptions
-    fullName: OneNote.Interfaces.TableRowCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#cellCount:member'
-      - 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#cells:member'
-      - 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#parentTable:member'
-      - 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#rowIndex:member'
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#cellCount:member'
-    summary: |-
-      对于集合中的每一项：获取行中的单元格的数目。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: cellCount
-    fullName: cellCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'cellCount?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#cells:member'
-    summary: |-
-      对于集合中的每一项：获取行中的单元格。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: cellCount
+  uid: onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#cellCount:member
+  package: onenote!
+  fullName: cellCount
+  summary: >-
+    对于集合中的每一项：获取行中的单元格的数目。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: cells
-    fullName: cells
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'cells?: OneNote.Interfaces.TableCellCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#id:member'
-    summary: |-
-      对于集合中的每一项：获取行的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#parentTable:member'
-    summary: |-
-      对于集合中的每一项：获取父表。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'cellCount?: boolean;'
+    return:
+      type: boolean
+- name: cells
+  uid: onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#cells:member
+  package: onenote!
+  fullName: cells
+  summary: >-
+    对于集合中的每一项：获取行中的单元格。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: parentTable
-    fullName: parentTable
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTable?: OneNote.Interfaces.TableLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#rowIndex:member'
-    summary: |-
-      对于集合中的每一项：获取其父表中的行的索引。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: rowIndex
-    fullName: rowIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowIndex?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.TableCellCollectionLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions:interface'
-    name: OneNote.Interfaces.TableLoadOptions
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'cells?: OneNote.Interfaces.TableCellCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableCellCollectionLoadOptions:interface" />
+- name: id
+  uid: onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    对于集合中的每一项：获取行的 ID。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: parentTable
+  uid: onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#parentTable:member
+  package: onenote!
+  fullName: parentTable
+  summary: >-
+    对于集合中的每一项：获取父表。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTable?: OneNote.Interfaces.TableLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableLoadOptions:interface" />
+- name: rowIndex
+  uid: onenote!OneNote.Interfaces.TableRowCollectionLoadOptions#rowIndex:member
+  package: onenote!
+  fullName: rowIndex
+  summary: >-
+    对于集合中的每一项：获取其父表中的行的索引。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowIndex?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: cac3cbc72533b5b1d9cb4998bff0aefa463c9d13
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250616"
