--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowcollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData:interface'
-    summary: '一个用于更新 TableRowCollection 对象上的数据的接口，可用于 "tableRowCollection （<!-- -->{ ... }<!-- -->)".'
-    name: OneNote.Interfaces.TableRowCollectionUpdateData
-    fullName: OneNote.Interfaces.TableRowCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData#items:member'
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: OneNote.Interfaces.TableRowData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData#items~0:complex'
-    name: 'OneNote.Interfaces.TableRowData[]'
-    fullName: 'OneNote.Interfaces.TableRowData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.TableRowData:interface'
-        name: OneNote.Interfaces.TableRowData
-        fullName: OneNote.Interfaces.TableRowData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: OneNote.Interfaces.TableRowCollectionUpdateData
+uid: onenote!OneNote.Interfaces.TableRowCollectionUpdateData:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableRowCollectionUpdateData
+summary: 用于更新 TableRowCollection 对象上的数据的接口，用于在 "tableRowCollection ( 中使用<!-- -->{ ... }<!-- -->)".
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: onenote!OneNote.Interfaces.TableRowCollectionUpdateData#items:member
+  package: onenote!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: OneNote.Interfaces.TableRowData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableRowData:interface" />[]
+metadata:
+  ms.openlocfilehash: 78e74129a41d1fba098175806d79dc1603652e93
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250567"
