--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowdata.yml
@@ -1,85 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableRowData:interface'
-    summary: 描述通过调用 "tableRow （）" 返回的数据的接口。
-    name: OneNote.Interfaces.TableRowData
-    fullName: OneNote.Interfaces.TableRowData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableRowData#cellCount:member'
-      - 'onenote!OneNote.Interfaces.TableRowData#cells:member'
-      - 'onenote!OneNote.Interfaces.TableRowData#id:member'
-      - 'onenote!OneNote.Interfaces.TableRowData#rowIndex:member'
-  - uid: 'onenote!OneNote.Interfaces.TableRowData#cellCount:member'
-    summary: |-
-      获取行中的单元格数。 只读。
+### YamlMime:TSType
+name: OneNote.Interfaces.TableRowData
+uid: onenote!OneNote.Interfaces.TableRowData:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableRowData
+summary: '一个接口，该接口描述通过调用 "tableRow ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: cellCount
+  uid: onenote!OneNote.Interfaces.TableRowData#cellCount:member
+  package: onenote!
+  fullName: cellCount
+  summary: >-
+    获取行中的单元格数。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: cellCount
-    fullName: cellCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'cellCount?: number;'
-      return:
-        type:
-          - number
-  - uid: 'onenote!OneNote.Interfaces.TableRowData#cells:member'
-    summary: |-
-      获取行中的单元格。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: cells
-    fullName: cells
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'cells?: OneNote.Interfaces.TableCellData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableRowData#cells~0:complex'
-  - uid: 'onenote!OneNote.Interfaces.TableRowData#id:member'
-    summary: |-
-      获取行的 ID。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'cellCount?: number;'
+    return:
+      type: number
+- name: cells
+  uid: onenote!OneNote.Interfaces.TableRowData#cells:member
+  package: onenote!
+  fullName: cells
+  summary: >-
+    获取行中的单元格。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.TableRowData#rowIndex:member'
-    summary: |-
-      获取其父表中的行索引。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: rowIndex
-    fullName: rowIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowIndex?: number;'
-      return:
-        type:
-          - number
-references:
-  - uid: 'onenote!OneNote.Interfaces.TableRowData#cells~0:complex'
-    name: 'OneNote.Interfaces.TableCellData[]'
-    fullName: 'OneNote.Interfaces.TableCellData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.TableCellData:interface'
-        name: OneNote.Interfaces.TableCellData
-        fullName: OneNote.Interfaces.TableCellData
-      - name: '[]'
-        fullName: '[]'
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'cells?: OneNote.Interfaces.TableCellData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableCellData:interface" />[]
+- name: id
+  uid: onenote!OneNote.Interfaces.TableRowData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取行的 ID。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: rowIndex
+  uid: onenote!OneNote.Interfaces.TableRowData#rowIndex:member
+  package: onenote!
+  fullName: rowIndex
+  summary: >-
+    获取其父表中的行索引。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowIndex?: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: b4ab0173b8dd0981751c007cbc018c2650ce38d5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250581"
