--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowloadoptions.yml
@@ -1,111 +1,114 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions:interface'
-    summary: |-
-      表示表中的行。
+### YamlMime:TSType
+name: OneNote.Interfaces.TableRowLoadOptions
+uid: onenote!OneNote.Interfaces.TableRowLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.TableRowLoadOptions
+summary: >-
+  表示表中的行。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.TableRowLoadOptions
-    fullName: OneNote.Interfaces.TableRowLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.TableRowLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.TableRowLoadOptions#cellCount:member'
-      - 'onenote!OneNote.Interfaces.TableRowLoadOptions#cells:member'
-      - 'onenote!OneNote.Interfaces.TableRowLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.TableRowLoadOptions#parentTable:member'
-      - 'onenote!OneNote.Interfaces.TableRowLoadOptions#rowIndex:member'
-  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions#cellCount:member'
-    summary: |-
-      获取行中的单元格数。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: cellCount
-    fullName: cellCount
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'cellCount?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions#cells:member'
-    summary: |-
-      获取行中的单元格。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.TableRowLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: cellCount
+  uid: onenote!OneNote.Interfaces.TableRowLoadOptions#cellCount:member
+  package: onenote!
+  fullName: cellCount
+  summary: >-
+    获取行中的单元格数。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: cells
-    fullName: cells
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'cells?: OneNote.Interfaces.TableCellCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions#id:member'
-    summary: |-
-      获取行的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions#parentTable:member'
-    summary: |-
-      获取父表。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'cellCount?: boolean;'
+    return:
+      type: boolean
+- name: cells
+  uid: onenote!OneNote.Interfaces.TableRowLoadOptions#cells:member
+  package: onenote!
+  fullName: cells
+  summary: >-
+    获取行中的单元格。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: parentTable
-    fullName: parentTable
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'parentTable?: OneNote.Interfaces.TableLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions#rowIndex:member'
-    summary: |-
-      获取其父表中的行索引。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: rowIndex
-    fullName: rowIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowIndex?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.TableCellCollectionLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.TableLoadOptions:interface'
-    name: OneNote.Interfaces.TableLoadOptions
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'cells?: OneNote.Interfaces.TableCellCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableCellCollectionLoadOptions:interface" />
+- name: id
+  uid: onenote!OneNote.Interfaces.TableRowLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取行的 ID。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: parentTable
+  uid: onenote!OneNote.Interfaces.TableRowLoadOptions#parentTable:member
+  package: onenote!
+  fullName: parentTable
+  summary: >-
+    获取父表。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'parentTable?: OneNote.Interfaces.TableLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableLoadOptions:interface" />
+- name: rowIndex
+  uid: onenote!OneNote.Interfaces.TableRowLoadOptions#rowIndex:member
+  package: onenote!
+  fullName: rowIndex
+  summary: >-
+    获取其父表中的行索引。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowIndex?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: ac3476b012895cb0a5efe7c0ed4ec8ad3eddd58b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49250532"
