--- a/docs/docs-ref-autogen/outlook_1_9/outlook/office.categorydetails.yml
+++ b/docs/docs-ref-autogen/outlook_1_9/outlook/office.categorydetails.yml
@@ -1,65 +1,65 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.CategoryDetails:interface'
-    summary: |-
-      代表类别的详细信息，如名称和关联的颜色。
+### YamlMime:TSType
+name: Office.CategoryDetails
+uid: outlook!Office.CategoryDetails:interface
+package: outlook!
+fullName: Office.CategoryDetails
+summary: >-
+  代表类别的详细信息，如名称和关联的颜色。
 
-      \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：撰写或阅读
+  \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: >-
+  **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
-      #### <a name="examples"></a>示例
 
-      ```javascript
-      var categories = [
-          {
-              "displayName": "Urgent!",
-              "color": Office.MailboxEnums.CategoryColor.Preset0
-          }
-      ];
-      ```
-    name: Office.CategoryDetails
-    fullName: Office.CategoryDetails
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.CategoryDetails#color:member'
-      - 'outlook!Office.CategoryDetails#displayName:member'
-  - uid: 'outlook!Office.CategoryDetails#color:member'
-    summary: 类别的颜色。
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color: MailboxEnums.CategoryColor | string;'
-      return:
-        type:
-          - 'outlook!Office.CategoryDetails#color~0:complex'
-  - uid: 'outlook!Office.CategoryDetails#displayName:member'
-    summary: 类别的名称。 最大长度为 255 个字符。
-    name: displayName
-    fullName: displayName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'displayName: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'outlook!Office.CategoryDetails#color~0:complex'
-    name: MailboxEnums.CategoryColor | string
-    fullName: Office.MailboxEnums.CategoryColor | string
-    spec.typeScript:
-      - uid: 'outlook!Office.MailboxEnums.CategoryColor:enum'
-        name: MailboxEnums.CategoryColor
-        fullName: Office.MailboxEnums.CategoryColor
-      - name: ' | string'
-        fullName: ' | string'
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
+
+
+  #### <a name="examples"></a>示例
+
+
+  ```javascript
+
+  var categories = [
+      {
+          "displayName": "Urgent!",
+          "color": Office.MailboxEnums.CategoryColor.Preset0
+      }
+  ];
+
+  ```
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: outlook!Office.CategoryDetails#color:member
+  package: outlook!
+  fullName: color
+  summary: 类别的颜色。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color: MailboxEnums.CategoryColor | string;'
+    return:
+      type: <xref uid="outlook!Office.MailboxEnums.CategoryColor:enum" /> | string
+- name: displayName
+  uid: outlook!Office.CategoryDetails#displayName:member
+  package: outlook!
+  fullName: displayName
+  summary: 类别的名称。 最大长度为 255 个字符。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'displayName: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: d150a6d920d3f9f324e22a095957d111f7ec9558
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49249797"
