--- a/docs/docs-ref-autogen/visio/visio/visio.pagerendercompleteeventargs.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.pagerendercompleteeventargs.yml
@@ -1,46 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.PageRenderCompleteEventArgs:interface'
-    summary: |-
-      提供有关引发了 PageRenderComplete 事件的页面的信息。
+### YamlMime:TSType
+name: Visio.PageRenderCompleteEventArgs
+uid: visio!Visio.PageRenderCompleteEventArgs:interface
+package: visio!
+fullName: Visio.PageRenderCompleteEventArgs
+summary: >-
+  提供有关引发了 PageRenderComplete 事件的页面的信息。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: Visio.PageRenderCompleteEventArgs
-    fullName: Visio.PageRenderCompleteEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: visio!
-    children:
-      - 'visio!Visio.PageRenderCompleteEventArgs#pageName:member'
-      - 'visio!Visio.PageRenderCompleteEventArgs#success:member'
-  - uid: 'visio!Visio.PageRenderCompleteEventArgs#pageName:member'
-    summary: |-
-      获取引发了 PageLoad 事件的页面的名称。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: pageName
-    fullName: pageName
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'pageName: string;'
-      return:
-        type:
-          - string
-  - uid: 'visio!Visio.PageRenderCompleteEventArgs#success:member'
-    summary: |-
-      获取 PageRender 事件的成功/失败。
+  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: pageName
+  uid: visio!Visio.PageRenderCompleteEventArgs#pageName:member
+  package: visio!
+  fullName: pageName
+  summary: >-
+    获取引发了 PageLoad 事件的页面的名称。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: success
-    fullName: success
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'success: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'pageName: string;'
+    return:
+      type: string
+- name: success
+  uid: visio!Visio.PageRenderCompleteEventArgs#success:member
+  package: visio!
+  fullName: success
+  summary: >-
+    获取 PageRender 事件的成功/失败。
+
+
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'success: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 83634b2d1077b7b9f360b1d83d92c163f1162c2c
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49249587"
