--- a/docs/docs-ref-autogen/visio/visio/visio.requestcontext.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.requestcontext.yml
@@ -1,54 +1,46 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.RequestContext:class'
-    summary: RequestContext 对象可方便对 Visio 应用程序提出请求。 由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行，因此需要请求上下文才能从外接程序获取对 Visio 对象模型的访问权限。
-    name: Visio.RequestContext
-    fullName: Visio.RequestContext
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientRequestContext:class'
-    package: visio!
-    children:
-      - 'visio!Visio.RequestContext:constructor(1)'
-      - 'visio!Visio.RequestContext#document:member'
-  - uid: 'visio!Visio.RequestContext:constructor(1)'
-    summary: 构造类的新实例 `RequestContext`
-    name: (constructor)(url)
-    fullName: (constructor)(url)
-    langs:
-      - typeScript
-    type: constructor
-    syntax:
-      content: 'constructor(url?: string | OfficeExtension.EmbeddedSession);'
-      parameters:
-        - id: url
-          description: ''
-          type:
-            - 'visio!Visio.RequestContext~0:complex'
-  - uid: 'visio!Visio.RequestContext#document:member'
-    name: document
-    fullName: document
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly document: Document;'
-      return:
-        type:
-          - 'visio!Visio.Document:class'
-references:
-  - uid: 'office!OfficeExtension.ClientRequestContext:class'
-    name: OfficeExtension.ClientRequestContext
-  - uid: 'visio!Visio.RequestContext~0:complex'
-    name: string | OfficeExtension.EmbeddedSession
-    fullName: string | OfficeExtension.EmbeddedSession
-    spec.typeScript:
-      - name: 'string | '
-        fullName: 'string | '
-      - uid: 'office!OfficeExtension.EmbeddedSession:class'
-        name: OfficeExtension.EmbeddedSession
-        fullName: OfficeExtension.EmbeddedSession
-  - uid: 'visio!Visio.Document:class'
-    name: Document
+### YamlMime:TSType
+name: Visio.RequestContext
+uid: visio!Visio.RequestContext:class
+package: visio!
+fullName: Visio.RequestContext
+summary: RequestContext 对象可方便对 Visio 应用程序提出请求。 由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行，因此需要请求上下文才能从外接程序获取对 Visio 对象模型的访问权限。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+constructors:
+- name: (constructor)(url)
+  uid: visio!Visio.RequestContext:constructor(1)
+  package: visio!
+  fullName: (constructor)(url)
+  summary: 构造类的新实例 `RequestContext`
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'constructor(url?: string | OfficeExtension.EmbeddedSession);'
+    parameters:
+    - id: url
+      description: ''
+      type: string | <xref uid="office!OfficeExtension.EmbeddedSession:class" />
+properties:
+- name: document
+  uid: visio!Visio.RequestContext#document:member
+  package: visio!
+  fullName: document
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly document: Document;'
+    return:
+      type: <xref uid="visio!Visio.Document:class" />
+extends: <xref uid="office!OfficeExtension.ClientRequestContext:class" />
+metadata:
+  ms.openlocfilehash: d2dbc67055120e9c6b3bd0eedcb2df05f5f5763d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49249517"
