--- a/docs/docs-ref-autogen/visio/visio/visio.selection.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.selection.yml
@@ -1,108 +1,99 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'visio!Visio.Selection:class'
-    summary: |-
-      表示页面中的 Selection 对象。
+### YamlMime:TSType
+name: Visio.Selection
+uid: visio!Visio.Selection:class
+package: visio!
+fullName: Visio.Selection
+summary: >-
+  表示页面中的 Selection 对象。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: Visio.Selection
-    fullName: Visio.Selection
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: visio!
-    children:
-      - 'visio!Visio.Selection#context:member'
-      - 'visio!Visio.Selection#load:member(1)'
-      - 'visio!Visio.Selection#load:member(2)'
-      - 'visio!Visio.Selection#shapes:member'
-      - 'visio!Visio.Selection#toJSON:member(1)'
-  - uid: 'visio!Visio.Selection#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'visio!Visio.RequestContext:class'
-  - uid: 'visio!Visio.Selection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Visio.Selection;'
-      return:
-        type:
-          - 'visio!Visio.Selection:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'visio!Visio.Selection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Visio.Selection;'
-      return:
-        type:
-          - 'visio!Visio.Selection:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
-          type:
-            - '{ select?: string; expand?: string; }'
-  - uid: 'visio!Visio.Selection#shapes:member'
-    summary: |-
-      获取所选内容的形状。 只读。
 
-      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
-    name: shapes
-    fullName: shapes
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly shapes: Visio.ShapeCollection;'
-      return:
-        type:
-          - 'visio!Visio.ShapeCollection:class'
-  - uid: 'visio!Visio.Selection#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始的 Visio. Selection 对象是一个 API 对象，但该 `toJSON` 方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.SelectionData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Visio.Interfaces.SelectionData;'
-      return:
-        type:
-          - 'visio!Visio.Interfaces.SelectionData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'visio!Visio.RequestContext:class'
-    name: RequestContext
-  - uid: 'visio!Visio.Selection:class'
-    name: Visio.Selection
-  - uid: 'visio!Visio.ShapeCollection:class'
-    name: Visio.ShapeCollection
-  - uid: 'visio!Visio.Interfaces.SelectionData:interface'
-    name: Visio.Interfaces.SelectionData
+  \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: visio!Visio.Selection#context:member
+  package: visio!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="visio!Visio.RequestContext:class" />
+- name: shapes
+  uid: visio!Visio.Selection#shapes:member
+  package: visio!
+  fullName: shapes
+  summary: >-
+    获取所选内容的形状。 只读。
+
+
+    \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly shapes: Visio.ShapeCollection;'
+    return:
+      type: <xref uid="visio!Visio.ShapeCollection:class" />
+methods:
+- name: load(propertyNames)
+  uid: visio!Visio.Selection#load:member(1)
+  package: visio!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Visio.Selection;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="visio!Visio.Selection:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: visio!Visio.Selection#load:member(2)
+  package: visio!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Visio.Selection;'
+    parameters:
+    - id: propertyNamesAndPaths
+      description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
+      type: '{ select?: string; expand?: string; }'
+    return:
+      type: <xref uid="visio!Visio.Selection:class" />
+      description: ''
+- name: toJSON()
+  uid: visio!Visio.Selection#toJSON:member(1)
+  package: visio!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始的 Visio. Selection 对象是 API 对象，则该 `toJSON` 方法返回一个简单的 JavaScript 对象 (键入为 `Visio.Interfaces.SelectionData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Visio.Interfaces.SelectionData;'
+    return:
+      type: <xref uid="visio!Visio.Interfaces.SelectionData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 40b8a0d2499cc3e97cf265a14714ebddb79ebd03
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49249468"
